# SNNs-auf-GPUs

./: .gitignore  README.md  SNN_module.env  SNN_module.yaml  data_workflow.yaml  launch.bat  notes.txt  pyrightconfig.json  requirements.txt
.claude/: settings.local.json
Distribution/: Model_Distribution.md
acceleration/: Kernel.cu
docs/: Haseeb-open-items.md  README.md  To-Do.md  agile_documentation.md  learning_changes.md  roadmap.md  snn_pipeline-mbxygysfp7fxikxm3zg5roddyh.tsx  v_model_diagnosis.md
event_data_workflow/: README.md  cache_engine.py  data_pipeline.py  data_workflow.yaml  gpu_stats.py  (+4 more)
src/: CMakeLists.txt  CMakeLists_README.md  README.md  launch.sh  pipeline.py
src/Learning/: __init__.py  data_pipeline.py  ddp_utils.py  training.py
src/Learning/Arm_implementation/: SNN.s  Wrapper.cpp
src/Learning/Arm_implementation/Claude/: Dockerfile  Makefile  README.md  arm_kernels.h  docker-compose.yml  event_kernel.s  event_types.h  pipeline.c  setup.sh  spike_kernel.c  test_asm_kernels.py
src/Learning/C++_Implementation/: CMakeList.txt  CNN.cpp  NN.cpp  SNN.cpp
src/Learning/Python_Implementation/: SNN_tensorflow.py  Zuhair_CNN.py  Zuhair_NN.py  main.py
src/Learning/Python_Implementation/Pytorch_study/: Main.py  PCB_modelling.py
src/Learning/Python_Implementation/Triton/: README.md  pyproject.toml
src/Learning/Python_Implementation/Triton/examples/: run_demo.py
src/Learning/Python_Implementation/Triton/src/triton_snn/: __init__.py  config.py  train.py
src/Learning/Python_Implementation/Triton/src/triton_snn/kernels/: __init__.py  lif.py
src/Learning/Python_Implementation/Triton/src/triton_snn/models/: __init__.py  snn.py
src/Learning/Python_Implementation/Triton/tests/: test_smoke.py
src/Learning/event_data_workflow/: __init__.py  cache_engine.py  data_pipeline.py  data_pipelinev2.py  data_workflow.yaml  temporal_slicer.py
src/Learning/frameworks/: snn_spikingjelly.py
src/Learning/frameworks/snn_norse/: run.py
src/Learning/snn_norse/: RESULTS_norse_snn_colab.ipynb  model.py  norse_results.md  run.py
src/Nose_independent_implemented/: config.py  evaluate.py
src/Simulator/: .env  main.py
src/acceleration/N_H/: Hardware_analysis.cpp  Implement.cpp  Kernel.cu  README.md  SNN_mapping.cpp  spike_kernel.py
src/compiler/: README.md  __init__.py  compiler.py  cuda_ops.py  notes.txt  pybind_module.cpp
src/compiler/backends/: backend_cuda.cu  ptx_backend.cu
src/compiler/include/: ir.hpp  lowering.hpp  runtime.hpp  scheduler.hpp
src/compiler/kernels/: bindings.cpp  lif_kernel.cu  lif_kernel.h
src/compiler/passes/: device_annotation.py  fusion.py  op_rewrite.py
src/compiler/src/: ir.py  lowering.py  planner.cpp  planner.py  runtime.py  scheduler.py
src/compiler/tests/: test_cuda_execution.py  test_ir.py  test_runtime.py  test_scheduler.py
src/crsc/: README.md  binding.cpp  compiler.txt  engine.cu
src/crsc/kernels/: snn_forward.cpp  snn_forward.cu
src/learning/: FRAMEWORK_CONFIG_ANALYSIS.md  PIPELINE_TRAINING_LOGS.md  Pipeline_changes&tets_from_old_to_New.md  README.md  Zuhair_SNN_pytorch.py  ___init__.py  __init__.py  adversarial_robustness.py  build_experiment_markdown.py  build_experiment_notebook.py  comparison_plots.py  data_pipeline.py  embed_md_images.py  inference.py  main.py  setup.py  snn_congif.py  snn_model.py  snn_module.py  snn_torch_module.py  spiking_jelly_module.py  test.py  training.py
src/learning/Dont_delete_this_folder/: NEXT_STEPS.md
src/learning/Pytorch_study/: Modelling_LR.py
src/learning/Spikingjelly_module/: Utils_SKJ.py
src/learning/event_data_workflow/: cache_engine.py  data_pipeline.py  data_workflow.yaml
src/learning/frameworks/: NORSE_TRAINING_LOG.md  __init__.py  activity_reg.py  model_interface.py  snn_norse.py  snn_spikingjelly.py  snn_torch.py
src/learning/snntorch_module/: Craft.py  Encoding.py  Utils_snntorch.py  __init__.py  library.py  snn_torch_module.py
src/learning/test_scripts/: test.py
src/learning/test_snn/test/: Utils_snntorch.py  run_snn.py  snn_torch_module.py
src/old_pipeline/: data_pipeline.py  main.py
src/old_pipeline/frameworks/: NORSE_TRAINING_LOG.md  README.md  __init__.py  snn_norse.py  snn_torch.py
src/old_snn_norse+deprecated/frameworks/old_snn_norse/: dataset.py  norse_snn_colab.ipynb
src/skeleton/: Encoding.py  __init__.py  data_pipeline.py  gpu_stats.py  inference.py  metrics.py  snn_config.py  snn_logging.py  training.py
src/temp_learning/event_data_workflow/: data_pipeline.py
(+42985 files in other folders)
