[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-snn"
version = "0.1.0"
description = "Python-first Triton-oriented starter project for spiking neural networks on GPU"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "triton>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
